# Draftwatch

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  TERMINAL_PLAN.md  THIRD_PARTY_LICENSES  package-lock.json  package.json  pyproject.toml
.github/workflows/: publish.yml
draftwatch/: __init__.py  __main__.py  app.py  term.py
draftwatch/assets/: codemirror.js  xterm.js
sample/: README.md  moby-dick.md  moby_dick.md
scripts/: build_vendor.mjs  smoke_frontend.mjs
testing/: test_acceptance.py  test_reconstruct.py
