[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "draftwatch"
version = "0.2.0"
description = "Review an AI agent's edits to your writing files as a real git word-diff — keep or revert changes hunk by hunk, then commit."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Mike Konczal" }]
keywords = ["git", "diff", "writing", "review", "ai", "agent", "markdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Text Editors",
    "Topic :: Software Development :: Version Control :: Git",
]
# stdlib-only by design; the optional native window is the only dependency
dependencies = []

[project.optional-dependencies]
app = ["pywebview>=4.0"]

[project.scripts]
draftwatch = "draftwatch.app:main"

[tool.setuptools]
packages = ["draftwatch"]

[tool.setuptools.package-data]
draftwatch = ["assets/*"]
